# cerebro

./: .api_config.yaml.example  .gitignore  CAPABILITIES.md  CLEANUP_SUMMARY.txt  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  FINAL_STATUS.txt  GITHUB_READY.md  LICENSE  PHASE1_READY.md  PHASE2_ROADMAP.md  PIPELINE_CONTEXT_SUCCESS_REPORT.md  PUSH_COMMANDS.sh  QUICK_REFERENCE.md  README.md  SECURITY.md  USAGE.md  pyproject.toml  rebuild_rag_index.py  requirements.txt  run_pipeline.py  setup.py
cerebro/: __init__.py  cli.py
cerebro/agents/: __init__.py  base_agent.py  code_cleaner_agent.py  data_exploration_agent.py  diagnostics_agent.py  execution_validator.py  hybrid_validator.py  modeling_agent.py  optimization_agent.py  orchestrator_agent.py  pipeline_context.py  preprocessing_agent.py  spec_writer_agent.py  visualization_agent.py
cerebro/codegen/: numpyro_svi_generator.py
cerebro/core/: __init__.py  orchestrator.py
cerebro/llm/: __init__.py  api_backend.py  auto_backend.py  code_judge.py  hybrid_backend.py  mlx_backend.py  ollama_backend.py  qwen_rag_backend.py  rag_backend.py  results_judge.py  tree_of_thought.py  vllm_backend.py
cerebro/memory/: __init__.py
cerebro/prompts/: __init__.py
cerebro/schemas/: __init__.py
cerebro/spec/: __init__.py  schema.py
cerebro/spec/examples/: complex_numpyro.yaml  simple_mmm.yaml
cerebro/tools/: __init__.py
cerebro/utils/: __init__.py  execution_validator.py  logging.py  package_manager.py  process_manager.py  semantic_search.py
examples/: autonomous_mmm_agent.py  demo_auto_backend.py  demonstrate_rag_flow.py  quickstart_autonomous_mmm.py
fine_tuning/: README.md  rebuild_production_rag.py  rebuild_rag_with_api_examples.py
tests/: __init__.py  test_data_profiling.py  test_imports.py  test_safety.py  test_string_parsing.py
