[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cerebro-ds"
version = "0.1.0"
description = "Autonomous AI agent for Product & Marketing Data Science"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Aditya Puttaparthi Tirumala", email = "puttaparthy.aditya@gmail.com"}
]
keywords = [
    "data-science", 
    "machine-learning", 
    "ab-testing", 
    "causal-inference", 
    "marketing-analytics",
    "agentic-ai",
    "llm"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "statsmodels>=0.13.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
causal = [
    "cvxpy>=1.3.0",
]

forecast = [
    "prophet>=1.1.0",
]

mmm = [
    "deepcausalmmm>=1.0.0",
]

memory = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
]

viz = [
    "plotly>=5.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]

all = [
    "cvxpy>=1.3.0",
    "prophet>=1.1.0",
    "deepcausalmmm>=1.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "plotly>=5.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]

dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "ruff>=0.0.250",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/adityapt/cerebro"
#Documentation = "https://cerebro-ds.readthedocs.io"
Repository = "https://github.com/adityapt/cerebro"
"Bug Tracker" = "https://github.com/adityapt/cerebro/issues"

[tool.setuptools]
packages = ["cerebro"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

